docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/vs-sport/_vs-sport.scss
.super-category-victoria-sport {
  html[lang="en"] & {
    .term-description-mobile-only,
    .c-plp,
    .c-department {
      .c-page-title {
        font-family: $vs-sport-bentonsanscomp;
        text-transform: uppercase;
        font-size: 2rem;
        letter-spacing: 1.6px;

        @include breakpoint($only-mobile) {
          font-size: 1.125rem;
          letter-spacing: 1px;
        }
      }
    }

    .acq-content-product,
    .acq-content-product-modal {
      .content__title_wrapper {
        h1,
        h2 {
          width: 100%;

          span {
            font-family: $vs-sport-bentonsanscomp;
            text-transform: uppercase;
            font-size: 2rem;
            letter-spacing: 1.6px;

            &.title--sub {
              font-family: $vs-regular;
              font-size: 0.875rem;
              letter-spacing: 0.8px;
            }
          }
        }
      }
    }

    .field--name-field-skus {
      .sku-base-form {
        button[type="submit"] {
          font-family: $vs-sport-bentonsanscomp;
          font-size: 1.125rem;
          letter-spacing: 0.9px;
        }
      }
    }

    .short-description-wrapper,
    .delivery-options-wrapper {
      .field__label {
        font-family: $vs-sport-bentonsanscomp;
        font-size: 1.25rem;
        letter-spacing: 1px;
        text-transform: uppercase;
      }
    }

    .subtitle {
      &.crossell-title {
        font-family: $vs-sport-bentonsanscomp;
        font-size: 1.25rem;
        letter-spacing: 1px;
        text-transform: uppercase;
      }
    }

    .promo__panel {
      &.block-promo-panel-wrapper {
        .promo-panel-label {
          font-family: $vs-sport-bentonsanscomp;
          font-size: 1.125rem;
          letter-spacing: 1px;
          text-transform: uppercase;
        }
      }
    }

    .promo__panel {
      .paragraph--type--offers-bordered {
        .field--name-field-heading {
          font-family: $vs-sport-bentonsanscomp;
          font-size: 1.125rem;
          letter-spacing: 1.2px;
        }

        .field--name-field-title {
          font-family: $vs-sport-bentonsanscomp;
          font-size: 2rem;
          letter-spacing: 1.8px;
        }

        .field--name-field-link {
          a {
            font-family: $vs-sport-bentonsanscomp;
            font-size: 1.125rem;
            letter-spacing: 1.9px;
          }
        }
      }
    }
  }
}

@include breakpoint($desktop) {
  html[lang="en"] {
    .super-category-victorias-secret,
    .super-category-victoria-sport {
      .block-alshaya-main-menu {
        a {
          &.menu__link {
            font-size: 0.75rem;
            letter-spacing: 0.2em;
          }
        }
      }
    }
  }
}

