CORE-4696: Fixing letter-spacing and width of L3 menu items.

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/vs-sport/_vs-sport.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/sass/components/vs-sport/_vs-sport.scss
@@ -110,10 +110,16 @@
     .super-category-victorias-secret,
     .super-category-victoria-sport {
       .block-alshaya-main-menu {
-        a {
-          &.menu__link {
-            font-size: 0.75rem;
-            letter-spacing: 0.2em;
+        a.menu__link {
+          letter-spacing: 0.44px;
+        }
+        
+        .menu--one__list-item {
+          & > .menu__link-wrapper {
+            & > a.menu__link {
+              font-size: 0.75rem;
+              letter-spacing: 2.4px;
+            }
           }
         }
       }
